<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="20sp"
    tools:context=".activity.AddContactActivity">

    <EditText
        android:id="@+id/add_contact_txt_aliassid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ID"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_contact_txt_aliassid">

        <Button
            android:id="@+id/add_contact_btn_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:text="@string/ADD_CONTACT"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/add_contact_btn_public"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:text="@string/GET_PUBLIC_KEY"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>