<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_txt_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/REG_LABEL"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_toolbar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            app:title="@string/REGISTER"
            app:titleTextColor="@color/colorPrimaryDark" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_txtLayout_alias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txt_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_txt_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/REG_ALIAS"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_txtLayout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txtLayout_alias">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LOGIN_EMAIL"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_txtLayout_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txtLayout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LOGIN_PASSWORD"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_txtLayout_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txtLayout_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_txt_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/REG_CONFIRM"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/tab_background"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/REGISTER_BTN"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_txtLayout_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>