<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_layout_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24dp"
        app:title="@string/LOGIN_BTN"
        app:titleTextColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/login_txt_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/LOGIN_LABEL"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_txtLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LOGIN_EMAIL"
            android:textCursorDrawable="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_txtLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txtLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/LOGIN_PASSWORD"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/LOGIN_BTN"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txtLayout_login" />


</androidx.constraintlayout.widget.ConstraintLayout>